--- a/database.ini
+++ b/database.ini
@@ -1,12 +1,6 @@
-<<<<<<< HEAD
 [postgresql]
 host=localhost
 database=tft
 user=postgres
-=======
-[postgresql]
-host=localhost
-database=tft
-user=postgres
->>>>>>> b9e89c99c79dddc34c4c6a4213695fb579e97626
 password=poizzle
+port=5432
