--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 plotly==6.0.0
-psycopg2-binary
+psycopg2-binary==2.9.3
 sqlalchemy==2.0.38
-streamlit
+streamlit==1.2.0
+pandas==1.3.4
+numpy==1.21.4
